# homeassistant-bosch-statistics

./: README.md  __init__.py  api.py  hacs.json  pyproject.toml  sensor.py
custom_components/bosch_statistics/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  options_flow.py  sensor.py  strings.json  utils.py
custom_components/bosch_statistics/dishwasher/: sensor.py
test-server/: data.json  index.js
