[tool.poetry]
name = "homeassistant-bosh-statistics"
version = "0.1.0"
description = ""
authors = ["Marco Hecktor <marco.hecktor@fh-dortmund.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.14.2,<4.0"
aiohttp = "3.13.5"
homeassistant = "^2026.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
